Fix navbar offset on Bibliotheca by always reserving scrollbar space

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@
 
 * { box-sizing: border-box; }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   background: var(--stone);
